[gd_scene load_steps=16 format=2]

[ext_resource path="res://scenes/test_scene_assets/tick_texture.png" type="Texture" id=1]
[ext_resource path="res://scenes/player/player.gd" type="Script" id=2]
[ext_resource path="res://scenes/test_scene_assets/arrow.png" type="Texture" id=3]
[ext_resource path="res://scenes/test_scene_assets/astronaut.png" type="Texture" id=4]
[ext_resource path="res://scenes/test_scene_assets/aiming_bar_over.png" type="Texture" id=5]
[ext_resource path="res://scenes/player/collision_probe.gd" type="Script" id=6]

[sub_resource type="Curve" id=2]
max_value = 200.0
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.739865, 200 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=3]
curve = SubResource( 2 )

[sub_resource type="ParticlesMaterial" id=4]
lifetime_randomness = 0.3
emission_shape = 1
emission_sphere_radius = 8.0
flag_disable_z = true
direction = Vector3( 0, 1, 0 )
spread = 10.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 120.0
initial_velocity_random = 0.2
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping_curve = SubResource( 3 )
scale = 2.0
color = Color( 0.470588, 0.490196, 0.858824, 1 )

[sub_resource type="CapsuleShape2D" id=1]
radius = 12.0

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 64, 8 )

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="Animation" id=6]
resource_name = "pulse"
loop = true
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 2, 2, 2 ),
"update": 0,
"values": [ 0.0, 100.0, 0.0 ]
}

[sub_resource type="CircleShape2D" id=9]
radius = 1.0

[node name="player" type="RigidBody2D"]
collision_mask = 6
mode = 2
script = ExtResource( 2 )

[node name="middle_trajectory" type="Line2D" parent="."]
unique_name_in_owner = true
width = 2.0

[node name="jet_particles" type="Particles2D" parent="."]
unique_name_in_owner = true
emitting = false
amount = 16
lifetime = 0.5
process_material = SubResource( 4 )

[node name="player_camera" type="Camera2D" parent="."]
unique_name_in_owner = true
current = true
zoom = Vector2( 1.5, 1.5 )

[node name="player_collision" type="CollisionShape2D" parent="."]
position = Vector2( 0, 4 )
shape = SubResource( 1 )

[node name="player_base_sprite" type="Sprite" parent="."]
texture = ExtResource( 4 )

[node name="aiming_arrow" type="Sprite" parent="."]
unique_name_in_owner = true
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )

[node name="aiming_bar" type="HSlider" parent="."]
unique_name_in_owner = true
margin_left = -32.0
margin_top = 32.0
margin_right = 32.0
margin_bottom = 40.0
rect_scale = Vector2( 1.5, 1.5 )
rect_pivot_offset = Vector2( 32, 4 )
custom_icons/grabber_disabled = ExtResource( 1 )
custom_icons/grabber_highlight = ExtResource( 1 )
custom_icons/grabber = ExtResource( 1 )
custom_styles/slider = SubResource( 5 )
custom_styles/grabber_area_highlight = SubResource( 7 )
custom_styles/grabber_area = SubResource( 8 )
step = 0.1
value = 85.0
editable = false
scrollable = false

[node name="pulse_animation" type="AnimationPlayer" parent="aiming_bar"]
anims/pulse = SubResource( 6 )

[node name="collision_probe" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 128
collision_mask = 4
script = ExtResource( 6 )

[node name="probe_shape" type="CollisionShape2D" parent="collision_probe"]
shape = SubResource( 9 )
